[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hands.gd" type="Script" id=1]
[ext_resource path="res://assets/hands/reaching hands-shade 01.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 48, 28 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 28.5, 20 )

[sub_resource type="Animation" id=2]

[sub_resource type="Animation" id=3]
resource_name = "reach"
length = 2.6
tracks/0/type = "value"
tracks/0/path = NodePath("CollisionShape2D5:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.4, 1.9, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 12 ), Vector2( 8, 362 ), Vector2( 8, 362 ), Vector2( 8, -188 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D6:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.4, 1.9, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -28.5, 60 ), Vector2( -28.5, 410 ), Vector2( -28.5, 410 ), Vector2( -28.5, -140 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.4, 1.9, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 350 ), Vector2( 0, 350 ), Vector2( 0, -200 ) ]
}

[node name="Hands" type="Area2D"]
position = Vector2( 0, 224 )
collision_layer = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2( 8, 12 )
shape = SubResource( 8 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2( -28.5, 60 )
shape = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/reach = SubResource( 3 )

[node name="CollectSound" type="AudioStreamPlayer" parent="."]
volume_db = -8.0

[node name="player_detection" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 400 )

[node name="player_detection2" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 400 )

[connection signal="body_entered" from="." to="." method="_on_hands_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
